--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if(Model.connect!=null){
+        <h1 class="display-4">@Model.connect.Test</h1>
+    }
+    else{
+        <h1 class="display-4">Woopsies</h1>
+    }
+    
 </div>
