--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -16,9 +16,9 @@
             @foreach (var symptom in Model.listSymptoms)
             {
                 <div>
-                    <label>@symptom.Name</label>
+                    <label name="" >@symptom.Name</label>
                     <br>
-                    <input type="range" name="Symptom @symptom.Id" min="0" max="100" value="0" class="form-control-range" required />
+                    <input type="range" name="severity" id="severity" min="0" max="100" value="0" class="form-control-range" required />
                 </div>
             }
         }
