dev/conversion_to_int_array

--- a/Pages/Traitement.cshtml
+++ b/Pages/Traitement.cshtml
@@ -2,6 +2,8 @@
 @model TraitementModel
 @{
     ViewData["Title"] = "Traitement";
-    
+
 }
-<h1>@Model.concatSymptomValues</h1>
+<div class="text-center">
+    <h1 class="display-4">Diagnosis</h1>
+</div>
