--- a/Pages/Traitement.cshtml
+++ b/Pages/Traitement.cshtml
@@ -2,8 +2,24 @@
 @model TraitementModel
 @{
     ViewData["Title"] = "Traitement";
-
 }
 <div class="text-center">
-    <h1 class="display-4">Diagnosis</h1>
+    @if (Model.Illness != null)
+    {
+        if(Model.Illness.Name != null)
+        {
+            <h1 class="display-4">Diagnosis</h1>
+            <p class="display-6">You Got @Model.Illness.Name</p>
+            <p class="display-6">Med suggested: @Model.Med.Name</p>
+        }
+        else
+        {
+            <h1 class="display-4">Hmmm</h1>
+            <p class="display-6">Seems like we don't know whatchu got</p>
+        }
+    }
+    else
+    {
+        <p class="display-6"> Woops the data is lost</p>
+    }
 </div>
