core/price_and_quantite

--- a/Pages/Traitement.cshtml
+++ b/Pages/Traitement.cshtml
@@ -11,6 +11,9 @@
             <h1 class="display-4">Diagnosis</h1>
             <p class="display-6">You Got @Model.Illness.Name</p>
             <p class="display-6">Med suggested: @Model.Med.Name</p>
+            <p class="display-6">Price: @Model.Prix</p>
+            <p class="display-6">Number: @Model.Quantite</p>
+            <p class="display-6">Total Price:@Model.Total</p>
         }
         else
         {
